# song

./: app.py  file_watcher.py  lyrics_analyzer.py  main.py  models.py  pyproject.toml  routes.py
lyrics/: AWAKE.txt  All Mine.txt  All of the Lights.txt  Alone.txt  Already Gone.txt  Amazing.txt  Amor.txt  Angel Eyes.txt  Angel of Mercy.txt  Angel.txt  BETTER LUCK NEXT TIME.txt  BIRDS OF A FEATHER.txt  BLOCK ME.txt  BLOOD..txt  BLUE.txt  BLVCKLVND GODESS.txt  BM J.R..txt  Baby By Me.txt  Back to December.txt  Bad Day.txt  Bad Decisions.txt  Bad News.txt  Bad News_1.txt  Bad One.txt  Bad Reputation.txt  Bad Romance (Chew Fu H1N1 Fix).txt  Bad Romance (Radio Edit).txt  Bad Romance.txt  Bad Side of the Moon.txt  Bad to You (Demo 2).txt  Bad to You.txt  Barcelona.txt  Be Mine.txt  Beatbox.txt  Beautiful.txt  Bedroom Acoustics.txt  Beef.txt  Been Like This.txt  Been You.txt  Before I Cry.txt  (+830 more)
static/css/: style.css
static/js/: contact.js  guitar.js  lyrics.js  main.js  script.js
templates/: artists.html  contact.html  index.html  layout.html  search.html  team.html  trending.html
