[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Temporary fix for Render deployment"
authors = ["Nikhil"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
nltk = ">=3.9.1"
psycopg2-binary = ">=2.9.10"
watchdog = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "watchdog>=6.0.0",
]
